Config Component Test framework <li>Added appsettings.json for properties to test details of browser, url,  slowmo, and headless</li> <li>Updated test to reflect the config usage  to Test method and Fact to use URL from appsettings.</li> Framework <li>Framework added ConfigReader to read the appsettings Test framework </li> <li>TestSettings updated to reflect new changes using details from appsettings headers.</li>

--- a/PlayWrightCSharp.csproj
+++ b/PlayWrightCSharp.csproj
@@ -42,7 +42,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Playwright-Automation_Framework\Playwright-Framework.csproj" />
+    <ProjectReference Include="..\Playwright-Framework\Playwright-Framework.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
